--- a/first-app/values.yaml
+++ b/first-app/values.yaml
@@ -65,6 +65,15 @@ resources:
     cpu: 100m
     memory: 128Mi
 
+pv:
+  storage: 1Gi
+  nfs:
+    path: /mnt/IT-Academy/nfs-data/sa2-21-22/demo_app
+    server: 192.168.37.105
+pvc:
+  storage: 1Gi
+
+ 
 autoscaling:
   enabled: false
   minReplicas: 1
