--- a/joomla_ingress.yaml
+++ b/joomla_ingress.yaml
@@ -18,6 +18,7 @@ spec:
                 name: sa-joomla
                 port:
                   number: 80
+### commit message
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
